# cmake_tests

./: CMakeLists.txt  README.md
include/proj_name/: proj_name.h
module1/: CMakeLists.txt
module1/include/proj_name/: module1.h
module1/include/proj_name/module1/: file00.h  file01.h
module1/src/: file00.c  file01.c
module2/: CMakeLists.txt
module2/include/proj_name/: module2.h
module2/include/proj_name/module2/: file00.h  file01.h
module2/src/: file00.c  file01.c
module3/: CMakeLists.txt
module3/include/proj_name/: module3.h
module3/include/proj_name/module3/: file00.h  file01.h
module3/src/: file00.c  file01.c
src/: proj_name.c
test/: test.c  test_main  test_main.c  test_mod1  test_mod1.c  test_mod2  test_mod2.c  test_mod3  test_mod3.c
